trying to fix font on safari

--- a/public/assets/css/custom-style.css
+++ b/public/assets/css/custom-style.css
@@ -6,10 +6,13 @@ html, body {
     overflow-x: hidden;
     /* background-color: black; */
     -webkit-font-smoothing: subpixel-antialiased;
+    backface-visibility: hidden;
     -webkit-backface-visibility: hidden;
 }
 p {
-    /* -webkit-font-smoothing: antialiased; */
+    -webkit-font-smoothing: subpixel-antialiased;
+    backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
 
 }
 .navbar{
